edit createSlug